Enhance resume HTML and CSS with dark theme support, improved layout, and new project details
- Implemented dark theme functionality with localStorage persistence in resume.html
- Updated font styles and colors for better readability in both light and dark themes
- Added new project "CandleThrob – Stock Market Analysis Dashboard" to showcase skills
- Refined PDF download functionality with improved layout and design elements
- Enhanced theme toggle button and added back-to-top functionality
- Updated styles.css with new variables and theme-specific styles for better contrast
- Removed unnecessary scripts and optimized existing ones for performance

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,6 @@ highlighter: rouge
 # Include/Exclude files
 include:
   - _pages
-  - .htaccess
-
 exclude:
   - README.md
   - LICENSE
@@ -44,12 +42,14 @@ defaults:
       layout: "default"
 
 # SEO settings
-lang: en
+# SEO settings
+lang: en_US
 locale: en_US
-
 # Social media
 social:
   name: Adetunji Fasiku
   links:
-    - https://github.com/Tunchiie
-    - https://linkedin.com/in/adetunji-fasiku
+    - name: GitHub
+      url: https://github.com/Tunchiie
+    - name: LinkedIn
+      url: https://linkedin.com/in/adetunji-fasiku
