--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,7 @@ RewriteRule ^([^\.]+)$ $1.html [NC,L]
 
 # Redirect .html URLs to clean URLs
 RewriteCond %{THE_REQUEST} \s/+(.+?)\.html[\s?] [NC]
-RewriteRule ^ /%1? [R=301,L]
+RewriteRule ^(.+)\.html$ /$1 [R=301,L,QSA]
 
 # Force HTTPS (optional - uncomment if you want to force HTTPS)
 # RewriteCond %{HTTPS} off
@@ -18,10 +18,13 @@ RewriteRule ^ /%1? [R=301,L]
 <IfModule mod_headers.c>
     Header always set X-Content-Type-Options nosniff
     Header always set X-Frame-Options DENY
-    Header always set X-XSS-Protection "1; mode=block"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
-</IfModule>
+    Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
+    # For broader compatibility, you may use the following syntax:
+    # Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
+    # Or, for newer browsers, use:
+    # Header always set Permissions-Policy "geolocation=(), microphone=(), camera=()"
 
 # Cache optimization
 <IfModule mod_expires.c>
@@ -29,7 +32,6 @@ RewriteRule ^ /%1? [R=301,L]
     ExpiresByType text/css "access plus 1 year"
     ExpiresByType application/javascript "access plus 1 year"
     ExpiresByType image/png "access plus 1 year"
-    ExpiresByType image/jpg "access plus 1 year"
     ExpiresByType image/jpeg "access plus 1 year"
     ExpiresByType image/gif "access plus 1 year"
     ExpiresByType image/svg+xml "access plus 1 year"
